k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: budgeometre
  labels:
    name: budgeometre
    app: budgeometre
