k8s/ecriture-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecriture-service
  namespace: u-grp5
  labels:
    app: ecriture-service
spec:
  type: ClusterIP
  ports:
  - port: 5001
    targetPort: 5001
    protocol: TCP
    name: http
  selector:
    app: ecriture-service
