k8s/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: budgeometre
  labels:
    app: gateway
spec:
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30000
    protocol: TCP
    name: http
  selector:
    app: gateway
