k8s/lecture-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lecture-service
  namespace: budgeometre
  labels:
    app: lecture-service
spec:
  type: ClusterIP
  ports:
  - port: 5002
    targetPort: 5002
    protocol: TCP
    name: http
  selector:
    app: lecture-service
